# whatsapp-ai

./: .dockerignore  .env.example  .gitignore  .npmrc  .releaserc.cjs  .releaserc.json  DEPLOYMENT.md  Dockerfile  IMPROVEMENT_ANALYSIS.md  PRD.md  PRODUCTION.md  README.md  config.example.json  config.json  docker-compose.custom.yml  docker-compose.dockerhub.yml  docker-compose.env.yml  docker-compose.ghcr.yml  docker-compose.hub-env.yml  docker-compose.hub.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  fix-chrome-session.sh  fix-permissions.sh  install-chrome.sh  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  test-chrome.js  turbo.json
.githooks/: pre-commit
.github/workflows/: ci.yml  docker-hub.yml  release.yml
apps/whatsapp-bot/: package-lock.json  package.json  tsconfig.json
apps/whatsapp-bot/src/: index.ts  types.d.ts
scripts/: check-secrets.js  smoke-tools.js
src/: __init__.py  index.js
src/bot/: baileysClient.js  chatIdResolver.js  whatsappBot.js  whatsappTransport.js
src/commands/: adminControls.js  commandHandler.js  securityCommands.js  status.js
src/config/: config.js  context.js  envValidator.js  validation.js
src/services/: adminService.js  agentTools.js  calService.js  conversationService.js  edgeTtsService.js  emailService.js  errorHandler.js  googleTtsService.js  inputValidator.js  lightweightCache.js  messageService.js  mistralAgentService.js  mistralApiService.js  mistralAudioService.js  mistralConversationService.js  monitoringService.js  performanceOptimizations.js  performanceOptimizer.js  persistenceService.js  rateLimiter.js  securityManager.js  sqlitePersistenceService.js  sqliteService.js  timeoutHandler.js  weeklyCleanupService.js  yueApiService.js
src/utils/: dateTimeParser.js  env.js  redact.js  requestContext.js
src/whatsapp_ai/: __init__.py  bot.py  config.py  main.py
src/whatsapp_ai/ai/: __init__.py  ai_service.py  anthropic_service.py  custom_service.py  ollama_service.py  openai_service.py
src/whatsapp_ai/services/: __init__.py  admin_service.py  analytics_service.py  command_service.py  (+2 more)
test/: adminService.test.js  agentTools.test.js  chatIdResolver.test.js  conversationService.test.js  dateTimeParser.test.js  edgeTtsService.test.js  emailService.test.js  env.test.js  googleTtsService.test.js  messageService.audio.test.js  mistralAgentService.test.js  mistralApiService.test.js  mistralAudioService.test.js  mistralConversationService.test.js  persistenceService.test.js  timeoutHandler.test.js  whatsappBot.waitForClientReady.test.js  whatsappTransport.test.js
test/mocks/: mistralClient.js
(+3 files in other folders)
